--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Post_A_Ride"></activity>
+        <activity android:name=".Search_result"></activity>
+        <activity android:name=".Request_A_Ride" />
+        <activity android:name=".Post_A_Ride" />
         <activity android:name=".Sign_up" />
         <activity android:name=".WelcomePage" />
         <activity android:name=".MainActivity">
