--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RideActivity"></activity>
+        <activity android:name=".Requested"></activity>
+        <activity android:name=".RideActivity" />
         <activity android:name=".Details_of_ride" />
         <activity android:name=".Request_A_Ride" />
         <activity android:name=".Post_A_Ride" />
