--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Requested"></activity>
+        <activity android:name=".Myrides"></activity>
+        <activity android:name=".Forgot_password" />
+        <activity android:name=".Requested" />
         <activity android:name=".RideActivity" />
         <activity android:name=".Details_of_ride" />
         <activity android:name=".Request_A_Ride" />
