--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Myrides"></activity>
+        <activity android:name=".Profile"></activity>
         <activity android:name=".Forgot_password" />
         <activity android:name=".Requested" />
         <activity android:name=".RideActivity" />
